--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,6 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,10 +16,15 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+
+
+/** App styling **/
+
+button {
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  border: 1px solid rgb(var(--foreground-rgb));
+  background: blue;
+  color: white;
 }
