--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,12 @@ body {
 
 /** App styling **/
 
+body {
+  background: #E0EAFC;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 .button, button, input[type="submit"] {
   padding: 0.5rem 1rem;
   border-radius: 0.25rem;
@@ -45,7 +51,7 @@ a:not(.button) {
 main {
   margin: 0 auto;
   width: min(100vw, 600px);
-  height: 100px;
+  padding: 1rem;
 }
 
 h1 {
