--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,18 +6,23 @@
   --foreground: #18478e;
   --foreground-light: #3e6db3;
   --text-light: #fff;
+  --background: #F9F9F9;
 }
+
 body {
   color: var(--foreground);
+  background: var(var(--background));
 }
 
 
 /** App styling **/
 
-body {
-  background: #E0EAFC;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+.meta {
+  font-size: 0.75rem;
+}
+
+.large {
+  font-size: 1.125rem;
 }
 
 .button, button, input[type="submit"] {
@@ -54,9 +59,14 @@ body {
 }
 
 input[type="email"] {
-  padding: 0.5rem 1rem;
-  border-radius: 0.25rem;
-  border: 1px solid rgb(var(--foreground-rgb));
+  padding: 0.5rem 3rem;
+  border-radius: 2rem;
+
+  border: 1px solid var(--foreground);
+  color: var(--foreground);
+  box-shadow: 0px 0.125rem #071428;
+
+  background: var(--background) url('/email.svg') no-repeat left 16px center;
 }
 
 a:not(.button), span.link {
@@ -68,8 +78,7 @@ a:not(.button), span.link {
 main {
   margin: 0 auto;
   width: min(100vw, 600px);
-  padding: 1rem;
-  padding-top: 3rem;
+  padding: 0 2rem;
 }
 
 em {
@@ -90,6 +99,7 @@ ul li {
 }
 
 h1 {
+  margin-top: 1rem;
   font-size: 2rem;
   margin-bottom: 1rem;
   font-weight: 700;
